Header Transclusion Regex Change & Overflow for Pre Correction

--- a/styles.css
+++ b/styles.css
@@ -113,3 +113,7 @@ pre[class*='language-'].line-numbers > code {
     -webkit-user-select: none;
     -ms-user-select: none;
 }
+
+div.oz-transclusion-widget pre {
+    overflow-x: auto;
+}
